Removing unnecessary properties hoping to fix the wanky sidebar on iPhones

--- a/src/sass/components/_sidebar__nav.scss
+++ b/src/sass/components/_sidebar__nav.scss
@@ -24,9 +24,6 @@
 .sidebar__nav__heading {
   display: block;
   padding: 6px 24px;
-  overflow: hidden;
-  cursor: default;
-  -webkit-user-select: none;
   color: rgba(0,0,0,0.38);
   font-size: 14px;
   font-weight: 500;
@@ -37,14 +34,11 @@
 
 .sidebar__nav__item {
   display: block;
-  position: relative;
   padding: 10px 24px;
-  overflow: visible;
   color: rgba(0,0,0,0.54);
   font-weight: 500;
   letter-spacing: 0;
   line-height: 20px;
-  text-align: start;
   text-transform: none;
 
   &:hover,
